[package]
name = "blinky_irq"
version = "0.1.0"
authors = ["nebelgrau <nebelgrau@gmx.com>"]
edition = "2018"

[[package.metadata.docs.rs]]
features = ["stm32f042", "rt", "stm32-usbd"]

[dependencies]
bare-metal = { version = "0.2", features = ["const-fn"] }
cast = { version = "0.2", default-features = false }
cortex-m = "0.6"
cortex-m-rt = "0.6"
embedded-hal = { version = "0.2", features = ["unproven"] }
stm32f0 = "0.9"
nb = "0.1"
void = { version = "1.0", default-features = false }
stm32-usbd = { version = "0.5.0", features = ["ram_access_2x16"], optional = true }
stm32f0xx-hal = {version = "0.15.2", features = ["stm32f030", "rt"]}
panic-halt = "0.2"
usb-device = "0.2.3"
usbd-serial = "0.1.0"

[profile.release]
lto = true
debug = true
opt-level = "z"

